# labelingo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: commands.md  design.md  development.md
labelingo/: annotator.py  cairo_utils.py  cli.py  ocr.py  openai_analysis.py  response_cache.py  svg_converter.py  types.py  utils.py  vision.py
labelingo/services/: __init__.py  analyze_image.py  cairo.py  claude.py  file_conversion.py  find_labels.py  openai.py  scene_identification.py
labelingo/stubs/: cairo.pyi
labelingo/stubs/cairosvg/: __init__.pyi
