[project]
name = "labelingo"
version = "0.1.0"
description = "Add callouts and translations to control panel and UI screenshots"
authors = [
    { name="Oliver Steele", email="steele@osteele.com" }
]
repository = "https://github.com/osteele/labelingo"
requires-python = ">=3.9"
dependencies = [
    "click",
    "anthropic",
    "pillow",
    "python-dotenv",
    "easyocr"
]
keywords = [
    "ocr",
    "translation",
    "callouts",
]

[project.optional-dependencies]
ocr = [
    "pytesseract",
    "paddleocr",
]

[project.scripts]
labelingo = "labelingo.cli:main"
labelingo1 = "labelingo.labelingo1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
