[project]
name = "labelingo"
version = "0.1.0"
description = "Annotate UI screenshots with translations"
authors = [
    { name = "Oliver Steele", email = "steele@osteele.com" }
]
dependencies = [
    "click>=8.0.0",
    "Pillow>=10.0.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "easyocr>=1.7.0",
    "openai>=1.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0"
]
dev = [
    "pre-commit>=3.6.0",
    "pyright>=1.1.350",
    "ruff>=0.3.3",
]

[project.scripts]
labelingo = "labelingo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
[tool.hatch.build.targets.wheel]
packages = ["labelingo"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.4",
]

[tool.pyright]
include = ["labelingo"]
stubPath = "labelingo/stubs"
typeCheckingMode = "basic"

[tool.hatch.envs.default]
dependencies = [
    "labelingo[dev]"
]

[tool.hatch.envs.default.scripts]
lint = [
    "ruff check .",
    "pyright"
]
fmt = "ruff format ."
typecheck = "pyright"

[tool.hatch.envs.cairo]
dependencies = [
    "labelingo[cairo]"
]

[tool.hatch.envs.ocr]
dependencies = [
    "labelingo[ocr]"
]

[tool.hatch.envs.full]
dependencies = [
    "labelingo[dev,cairo,ocr]"
]
